MIR-842 fixed bootstrap migration issues
* fixed print view and file listing (only works with ff atm)
* added class "d-flex" to fix broken layout in chrome and IE
* fix table-condensed - is now table-sm
* remove duplicate scss entry
* fix column layout of file listing
* migrate .well -> .card usage for upload div
* fixed missing column if no file options are shown
* link is now recognizable as link
* fixed hidden title
* adds dropdown item class to list items
* migrates copy citation link to bs 4

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/bootstrap4fix.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/bootstrap4fix.scss
@@ -49,12 +49,16 @@ li.dropdown-item {
         text-decoration: none;
     }
 }
-.dropdown-menu-right .dropdown-item a {
+
+.dropdown-menu-right .dropdown-item a,
+.search_type .dropdown-item a {
   color: #7b8a8b;
 }
-.dropdown-menu-right .dropdown-item:hover a {
+.dropdown-menu-right .dropdown-item:hover a,
+.search_type .dropdown-item:hover a {
   color: white;
 }
+
 .card {
     margin-bottom: 20px;
 }
@@ -99,6 +103,25 @@ li.dropdown-item {
     border: 1px solid green;
   }
 }
+
+.btn,
+.btn:active,
+.btn:focus {
+  box-shadow: none !important;
+}
+.mir_copy_wrapper {
+  padding: 10px;
+  background-color: #eee;
+  border-radius: 5px;
+  pre {
+    margin: 0;
+  }
+}
+.mir_copy_identifier {
+  right: 15px;
+  top: 10px;
+}
+
 // Large devices (desktops) and below
 @include media-breakpoint-down(lg) {
     // add/overwrite styles for responsive level lg and lower
