--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_results.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_results.scss
@@ -467,9 +467,6 @@ $file_box_color: $card-bg !default;
                 .set_number {
                   margin-left: 6px;
                 }
-                .caret {
-                  margin-left: 6px;
-                }
               }
             }
             .options {
@@ -503,7 +500,7 @@ $file_box_color: $card-bg !default;
                   }
                 }
                 .option {
-                  color: $dark_neutral;
+                  color: #7b8a8b;
                   background-color: transparent;
                   &:hover {
                     color: white;
@@ -563,8 +560,7 @@ $file_box_color: $card-bg !default;
                 }
               }
             }
-            border-top: 0px solid $file_box_color;
-            padding: 5px 0px 5px 0px;
+
             .options {
                 .dropdown-menu > li > a:hover {
                   background-color: $highlight;
